made view-your-cart text fixed, and hide the scrollbar if not needed

--- a/src/app/components/cart/cart.component.css
+++ b/src/app/components/cart/cart.component.css
@@ -15,7 +15,7 @@
 }
 
 .over-flow-control{
-  overflow-y: scroll;
+  overflow-y: auto;
   height: 625px;
 }
 
